--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 # Built application files
 *.apk
 *.aar
@@ -110,3 +111,19 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+*.iml
+.gradle
+/local.properties
+/.idea/caches
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/assetWizardSettings.xml
+.DS_Store
+/build
+/captures
+.externalNativeBuild
+.cxx
+local.properties
